@@ -1256,6 +1256,7 @@ jsp.tools.move-item.collection.from.msg                         = Collection to 
 jsp.tools.move-item.collection.to.msg                           = Collection to move to
 jsp.tools.move-item.item.name.msg                               = Name of the item to be moved
 jsp.tools.move-item.title                                       = Moving an item
+jsp.tools.move-item.inheritpolicies                             = Inherit default policies of destination collection
 jsp.tools.upload-bitstream.info                                 = Select the bitstream to upload
 jsp.tools.upload-bitstream.title                                = Upload Bitstream
 jsp.tools.upload-bitstream.upload                               = Upload
